--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bolt",
-  "description": "An AI Agent",
+  "description": "BNP Media deployment",
   "private": true,
   "license": "MIT",
   "sideEffects": false,
@@ -9,11 +9,11 @@
   "author": {
     "name": "bolt.diy team",
     "email": "maintainers@bolt.diy"
-  ,"netlify-plugin-remix": "^1.0.0"}`
-  "scripts": {`n    "build": "remix build",
+  },
+  "scripts": {
+    "build": "remix build",
     "deploy": "npm run build && wrangler pages deploy",
-    "build": "remix vite:build",
-    "dev": "node pre-start.cjs  && remix vite:dev",
+    "dev": "node pre-start.cjs && remix vite:dev",
     "test": "vitest --run",
     "test:watch": "vitest",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint app",
@@ -39,10 +39,10 @@
     "electron:build:win": "rm -rf dist && pnpm electron:build:renderer && pnpm electron:build:deps && electron-builder --win",
     "electron:build:linux": "rm -rf dist && pnpm electron:build:renderer && pnpm electron:build:deps && electron-builder --linux",
     "electron:build:dist": "rm -rf dist && pnpm electron:build:renderer && pnpm electron:build:deps && electron-builder --mwl"
-  ,"netlify-plugin-remix": "^1.0.0"}`
+  },
   "engines": {
     "node": ">=18.18.0"
-  ,"netlify-plugin-remix": "^1.0.0"}`
+  },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "1.0.6",
     "@ai-sdk/anthropic": "0.0.39",
@@ -152,57 +152,31 @@
     "use-debounce": "^10.0.4",
     "vite-plugin-node-polyfills": "^0.22.0",
     "zod": "^3.24.1",
-    "zustand": "^5.0.3"
-  ,"netlify-plugin-remix": "^1.0.0"}`
+    "zustand": "^5.0.3",
+    "netlify-plugin-remix": "^1.0.0"
+  },
   "devDependencies": {
     "@blitz/eslint-plugin": "0.1.0",
-    "@cloudflare/workers-types": "^4.20241127.0",
-    "@electron/notarize": "^2.5.0",
-    "@iconify-json/ph": "^1.2.1",
-    "@iconify/types": "^2.0.0",
-    "@remix-run/dev": "^2.15.2",
-    "@remix-run/serve": "^2.15.2",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@types/diff": "^5.2.3",
-    "@types/dom-speech-recognition": "^0.0.4",
-    "@types/electron": "^1.6.12",
-    "@types/file-saver": "^2.0.7",
-    "@types/js-cookie": "^3.0.6",
-    "@types/path-browserify": "^1.0.3",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-window": "^1.8.8",
-    "@vitejs/plugin-react": "^4.3.4",
-    "concurrently": "^8.2.2",
-    "cross-env": "^7.0.3",
-    "crypto-browserify": "^3.12.1",
-    "electron": "^33.2.0",
-    "electron-builder": "^25.1.8",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.6",
-    "fast-glob": "^3.3.2",
-    "husky": "9.1.7",
-    "is-ci": "^3.0.1",
-    "jsdom": "^26.0.0",
-    "node-fetch": "^3.3.2",
-    "pnpm": "^9.14.4",
-    "prettier": "^3.5.3",
-    "rimraf": "^4.4.1",
-    "sass-embedded": "^1.81.0",
-    "stream-browserify": "^3.0.0",
-    "typescript": "^5.7.2",
-    "unified": "^11.0.5",
-    "unocss": "^0.61.9",
-    "vite": "^5.4.11",
-    "vite-plugin-copy": "^0.1.6",
-    "vite-plugin-optimize-css-modules": "^1.1.0",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.1.7",
-    "wrangler": "^4.5.1"
-  ,"netlify-plugin-remix": "^1.0.0"}`
+    "@cloudflare/workers-types": "^3.9.0",
+    "@esbuild/linux-x64": "^0.18.0",
+    "@esbuild/osx-x64": "^0.18.0",
+    "@esbuild/windows-x64": "^0.18.0",
+    "@types/node": "^18.16.1",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "eslint": "^8.42.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-react": "^7.32.0",
+    "husky": "^8.0.3",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^3.0.0",
+    "tailwindcss": "^3.6.0",
+    "typescript": "^5.1.0",
+    "vitest": "^0.32.2",
+    "vite": "^4.3.0"
+  },
   "resolutions": {
-    "@typescript-eslint/utils": "^8.0.0-alpha.30"
-  ,"netlify-plugin-remix": "^1.0.0"}`
-  "packageManager": "pnpm@9.4.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
